added from home

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>hello js family</h1>
-    <script src="./obj.js"></script>
+    <script src="./closer&scope.js"></script>
   </body>
 </html>
