--- a/TypeScript/index.html
+++ b/TypeScript/index.html
@@ -7,11 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello js family</h1>
-
-    <button id="getdata">Get Data</button>
-    <button id="senddata">Send Data</button>
-
-    <script src="./setWeakset.js"></script>
+    <p></p>
+    <script src="./output/script.js"></script>
   </body>
 </html>
